--- a/index.html
+++ b/index.html
@@ -30,9 +30,201 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4">.col-md-4</div>
-    <div class="col-md-4">.col-md-4</div>
-    <div class="col-md-4">.col-md-4</div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic0">
+        <a href="#" onclick="init(0);">
+          <img src="images/greetings.png" alt="greetings" id="img0"><br>Greetings I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic1">
+        <a href="#" onclick="init(1);">
+          <img src="images/greetings.png" alt="greetings" id="img1"><br>Greetings II    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic2">
+        <a href="#" onclick="init(2);">
+          <img src="images/excuseme.png" alt="excuseme" id="img2"><br>Excuse Me I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic3">
+        <a href="#" onclick="init(3);">
+          <img src="images/excuseme.png" alt="excuseme" id="img3"><br>Excuse Me II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic4">
+        <a href="#" onclick="init(4);">
+          <img src="images/excuseme.png" alt="learning" id="img4"><br>Excuse Me III    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic5">
+        <a href="#" onclick="init(5);">
+          <img src="images/learning.png" alt="learning" id="img5"><br>Learning I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic6">
+        <a href="#" onclick="init(6);">
+          <img src="images/learning.png" alt="learning" id="img6"><br>Learning II    
+        </a>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic7">
+        <a href="#" onclick="init(7);">
+          <img src="images/doing.png" alt="doing" id="img7"><br>What are you doing? I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic8">
+        <a href="#" onclick="init(8);">
+          <img src="images/doing.png" alt="doing" id="img8"><br>What are you doing? II    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic9">
+        <a href="#" onclick="init(9);">
+          <img src="images/when.png" alt="when" id="img9"><br>When? I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic10">
+        <a href="#" onclick="init(10);">
+          <img src="images/when.png" alt="when" id="img10"><br>When? II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic11">
+        <a href="#" onclick="init(11);">
+          <img src="images/when.png" alt="when" id="img11"><br>When? III    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic12">
+        <a href="#" onclick="init(12);">
+          <img src="images/numbers.png" alt="numbers" id="img12"><br>Numbers and time I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic13">
+        <a href="#" onclick="init(13);">
+          <img src="images/numbers.png" alt="numbers" id="img13"><br>Numbers and time II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic14">
+        <a href="#" onclick="init(14);">
+          <img src="images/numbers.png" alt="numbers" id="img14"><br>Numbers and time III    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic15">
+        <a href="#" onclick="init(15);">
+          <img src="images/numbers.png" alt="numbers" id="img15"><br>Numbers and time IV    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic16">
+        <a href="#" onclick="init(16);">
+          <img src="images/numbers.png" alt="numbers" id="img16"><br>Numbers and time V    
+        </a>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic17">
+        <a href="#" onclick="init(17);">
+          <img src="images/school.png" alt="school" id="img17"><br>School I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic18">
+        <a href="#" onclick="init(18);">
+          <img src="images/school.png" alt="school" id="img18"><br>School II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic19">
+        <a href="#" onclick="init(19);">
+          <img src="images/school.png" alt="school" id="img19"><br>School III    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic20">
+        <a href="#" onclick="init(20);">
+          <img src="images/directions.png" alt="directions" id="img20"><br>Giving Directions I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic21">
+        <a href="#" onclick="init(21);">
+          <img src="images/directions.png" alt="directions" id="img21"><br>Giving Directions II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic22">
+        <a href="#" onclick="init(22);">
+          <img src="images/directions.png" alt="directions" id="img22"><br>Giving Directions III    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic23">
+        <a href="#" onclick="init(23);">
+          <img src="images/household.png" alt="household" id="img23"><br>Household I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic24">
+        <a href="#" onclick="init(24);">
+          <img src="images/household.png" alt="household" id="img24"><br>Household II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic25">
+        <a href="#" onclick="init(25);">
+          <img src="images/household.png" alt="household" id="img25"><br>Household III    
+        </a>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic26">
+        <a href="#" onclick="init(26);">
+          <img src="images/plans.png" alt="plans" id="img26"><br>Making Plans I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic27">
+        <a href="#" onclick="init(27);">
+          <img src="images/plans.png" alt="plans" id="img27"><br>Making Plans II    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic28">
+        <a href="#" onclick="init(28);">
+          <img src="images/plans.png" alt="plans" id="img28"><br>Making Plans III    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic29">
+        <a href="#" onclick="init(29);">
+          <img src="images/activities.png" alt="activities" id="img29"><br>Daily Activities I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic30">
+        <a href="#" onclick="init(30);">
+          <img src="images/activities.png" alt="activities" id="img30"><br>Daily Activities II    
+        </a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p class="text-center topic" id="topic31">
+        <a href="#" onclick="init(31);">
+          <img src="images/activities.png" alt="activities" id="img31"><br>Let's eat! I    
+        </a>
+      </p>
+      <p class="text-center topic" id="topic32">
+        <a href="#" onclick="init(32);">
+          <img src="images/activities.png" alt="activities" id="img32"><br>Let's eat! II    
+        </a>
+      </p>
+    </div>
   </div>
   <!-- matchingGame Modal -->
   <div class="modal fade" id="matchingGame" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
