--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
             </div> <!-- /content -->
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Exit</button>
+          <div id="progressBar"><div></div></div>
+          <button type="button" class="btn btn-info" data-dismiss="modal">Exit</button>
         </div>
       </div>
     </div>
@@ -264,14 +265,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="myModalLabel">You did it!</h4>
+          <h4 class="modal-title" id="myModalLabel">Finished!</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p id="finalScore"></p>
         </div>
-        <div class="modal-footer"><button
-          <button type="button" class="btn btn-default" data-dismiss="modal">Quit</button>
-          <button type="button" class="btn btn-primary" onclick="init()">Play Again</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+          <button type="button" class="btn btn-success" onclick="init()" id="finalbutton">Play Again</button>
         </div>
       </div>
     </div>
