updated icons and their display

--- a/index.html
+++ b/index.html
@@ -34,41 +34,41 @@
     <div class="col-md-4">
       <p class="text-center topic" id="topic0">
         <a href="#" onclick="init(0);">
-          <img src="images/greetings_disabled.png" alt="greetings" id="img0"><br>Greetings I    
+          <img src="images/greetings_disabled.png" alt="greetings"class="ui-icon" id="img0"><br>Greetings I    
         </a>
       </p>
       <p class="text-center topic" id="topic1">
         <a href="#" onclick="init(1);">
-          <img src="images/greetings_disabled.png" alt="greetings" id="img1"><br>Greetings II    
+          <img src="images/greetings_disabled.png" alt="greetings"class="ui-icon" id="img1"><br>Greetings II    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic2">
         <a href="#" onclick="init(2);">
-          <img src="images/excuseme_disabled.png" alt="excuseme" id="img2"><br>Excuse Me I    
+          <img src="images/excuseme_disabled.png" alt="excuseme"class="ui-icon" id="img2"><br>Excuse Me I    
         </a>
       </p>
       <p class="text-center topic" id="topic3">
         <a href="#" onclick="init(3);">
-          <img src="images/excuseme_disabled.png" alt="excuseme" id="img3"><br>Excuse Me II    
+          <img src="images/excuseme_disabled.png" alt="excuseme"class="ui-icon" id="img3"><br>Excuse Me II    
         </a>
       </p>
       <p class="text-center topic" id="topic4">
         <a href="#" onclick="init(4);">
-          <img src="images/excuseme_disabled.png" alt="learning" id="img4"><br>Excuse Me III    
+          <img src="images/excuseme_disabled.png" alt="learning"class="ui-icon" id="img4"><br>Excuse Me III    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic5">
         <a href="#" onclick="init(5);">
-          <img src="images/learning_disabled.png" alt="learning" id="img5"><br>Learning I    
+          <img src="images/learning_disabled.png" alt="learning"class="ui-icon" id="img5"><br>Learning I    
         </a>
       </p>
       <p class="text-center topic" id="topic6">
         <a href="#" onclick="init(6);">
-          <img src="images/learning_disabled.png" alt="learning" id="img6"><br>Learning II    
+          <img src="images/learning_disabled.png" alt="learning"class="ui-icon" id="img6"><br>Learning II    
         </a>
       </p>
     </div>
@@ -78,56 +78,56 @@
     <div class="col-md-4">
       <p class="text-center topic" id="topic7">
         <a href="#" onclick="init(7);">
-          <img src="images/doing_disabled.png" alt="doing" id="img7"><br>What are you doing? I    
+          <img src="images/doing_disabled.png" alt="doing"class="ui-icon" id="img7"><br>What are you doing? I    
         </a>
       </p>
       <p class="text-center topic" id="topic8">
         <a href="#" onclick="init(8);">
-          <img src="images/doing_disabled.png" alt="doing" id="img8"><br>What are you doing? II    
+          <img src="images/doing_disabled.png" alt="doing"class="ui-icon" id="img8"><br>What are you doing? II    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic9">
         <a href="#" onclick="init(9);">
-          <img src="images/when_disabled.png" alt="when" id="img9"><br>When? I    
+          <img src="images/when_disabled.png" alt="when"class="ui-icon" id="img9"><br>When? I    
         </a>
       </p>
       <p class="text-center topic" id="topic10">
         <a href="#" onclick="init(10);">
-          <img src="images/when_disabled.png" alt="when" id="img10"><br>When? II    
+          <img src="images/when_disabled.png" alt="when"class="ui-icon" id="img10"><br>When? II    
         </a>
       </p>
       <p class="text-center topic" id="topic11">
         <a href="#" onclick="init(11);">
-          <img src="images/when_disabled.png" alt="when" id="img11"><br>When? III    
+          <img src="images/when_disabled.png" alt="when"class="ui-icon" id="img11"><br>When? III    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic12">
         <a href="#" onclick="init(12);">
-          <img src="images/numbers_disabled.png" alt="numbers" id="img12"><br>Numbers and time I    
+          <img src="images/numbers_disabled.png" alt="numbers"class="ui-icon" id="img12"><br>Numbers and time I    
         </a>
       </p>
       <p class="text-center topic" id="topic13">
         <a href="#" onclick="init(13);">
-          <img src="images/numbers_disabled.png" alt="numbers" id="img13"><br>Numbers and time II    
+          <img src="images/numbers_disabled.png" alt="numbers"class="ui-icon" id="img13"><br>Numbers and time II    
         </a>
       </p>
       <p class="text-center topic" id="topic14">
         <a href="#" onclick="init(14);">
-          <img src="images/numbers_disabled.png" alt="numbers" id="img14"><br>Numbers and time III    
+          <img src="images/numbers_disabled.png" alt="numbers"class="ui-icon" id="img14"><br>Numbers and time III    
         </a>
       </p>
       <p class="text-center topic" id="topic15">
         <a href="#" onclick="init(15);">
-          <img src="images/numbers_disabled.png" alt="numbers" id="img15"><br>Numbers and time IV    
+          <img src="images/numbers_disabled.png" alt="numbers"class="ui-icon" id="img15"><br>Numbers and time IV    
         </a>
       </p>
       <p class="text-center topic" id="topic16">
         <a href="#" onclick="init(16);">
-          <img src="images/numbers_disabled.png" alt="numbers" id="img16"><br>Numbers and time V    
+          <img src="images/numbers_disabled.png" alt="numbers"class="ui-icon" id="img16"><br>Numbers and time V    
         </a>
       </p>
     </div>
@@ -137,51 +137,51 @@
     <div class="col-md-4">
       <p class="text-center topic" id="topic17">
         <a href="#" onclick="init(17);">
-          <img src="images/school_disabled.png" alt="school" id="img17"><br>School I    
+          <img src="images/school_disabled.png" alt="school"class="ui-icon" id="img17"><br>School I    
         </a>
       </p>
       <p class="text-center topic" id="topic18">
         <a href="#" onclick="init(18);">
-          <img src="images/school_disabled.png" alt="school" id="img18"><br>School II    
+          <img src="images/school_disabled.png" alt="school"class="ui-icon" id="img18"><br>School II    
         </a>
       </p>
       <p class="text-center topic" id="topic19">
         <a href="#" onclick="init(19);">
-          <img src="images/school_disabled.png" alt="school" id="img19"><br>School III    
+          <img src="images/school_disabled.png" alt="school"class="ui-icon" id="img19"><br>School III    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic20">
         <a href="#" onclick="init(20);">
-          <img src="images/directions_disabled.png" alt="directions" id="img20"><br>Giving Directions I    
+          <img src="images/directions_disabled.png" alt="directions"class="ui-icon" id="img20"><br>Giving Directions I    
         </a>
       </p>
       <p class="text-center topic" id="topic21">
         <a href="#" onclick="init(21);">
-          <img src="images/directions_disabled.png" alt="directions" id="img21"><br>Giving Directions II    
+          <img src="images/directions_disabled.png" alt="directions"class="ui-icon" id="img21"><br>Giving Directions II    
         </a>
       </p>
       <p class="text-center topic" id="topic22">
         <a href="#" onclick="init(22);">
-          <img src="images/directions_disabled.png" alt="directions" id="img22"><br>Giving Directions III    
+          <img src="images/directions_disabled.png" alt="directions"class="ui-icon" id="img22"><br>Giving Directions III    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic23">
         <a href="#" onclick="init(23);">
-          <img src="images/household_disabled.png" alt="household" id="img23"><br>Household I    
+          <img src="images/household_disabled.png" alt="household"class="ui-icon" id="img23"><br>Household I    
         </a>
       </p>
       <p class="text-center topic" id="topic24">
         <a href="#" onclick="init(24);">
-          <img src="images/household_disabled.png" alt="household" id="img24"><br>Household II    
+          <img src="images/household_disabled.png" alt="household"class="ui-icon" id="img24"><br>Household II    
         </a>
       </p>
       <p class="text-center topic" id="topic25">
         <a href="#" onclick="init(25);">
-          <img src="images/household_disabled.png" alt="household" id="img25"><br>Household III    
+          <img src="images/household_disabled.png" alt="household"class="ui-icon" id="img25"><br>Household III    
         </a>
       </p>
     </div>
@@ -191,41 +191,41 @@
     <div class="col-md-4">
       <p class="text-center topic" id="topic26">
         <a href="#" onclick="init(26);">
-          <img src="images/plans_disabled.png" alt="plans" id="img26"><br>Making Plans I    
+          <img src="images/plans_disabled.png" alt="plans"class="ui-icon" id="img26"><br>Making Plans I    
         </a>
       </p>
       <p class="text-center topic" id="topic27">
         <a href="#" onclick="init(27);">
-          <img src="images/plans_disabled.png" alt="plans" id="img27"><br>Making Plans II    
+          <img src="images/plans_disabled.png" alt="plans"class="ui-icon" id="img27"><br>Making Plans II    
         </a>
       </p>
       <p class="text-center topic" id="topic28">
         <a href="#" onclick="init(28);">
-          <img src="images/plans_disabled.png" alt="plans" id="img28"><br>Making Plans III    
+          <img src="images/plans_disabled.png" alt="plans"class="ui-icon" id="img28"><br>Making Plans III    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic29">
         <a href="#" onclick="init(29);">
-          <img src="images/activities_disabled.png" alt="activities" id="img29"><br>Daily Activities I    
+          <img src="images/activities_disabled.png" alt="activities"class="ui-icon" id="img29"><br>Daily Activities I    
         </a>
       </p>
       <p class="text-center topic" id="topic30">
         <a href="#" onclick="init(30);">
-          <img src="images/activities_disabled.png" alt="activities" id="img30"><br>Daily Activities II    
+          <img src="images/activities_disabled.png" alt="activities"class="ui-icon" id="img30"><br>Daily Activities II    
         </a>
       </p>
     </div>
     <div class="col-md-4">
       <p class="text-center topic" id="topic31">
         <a href="#" onclick="init(31);">
-          <img src="images/eat_disabled.png" alt="activities" id="img31"><br>Let's eat! I    
+          <img src="images/eat_disabled.png" alt="activities"class="ui-icon" id="img31"><br>Let's eat! I    
         </a>
       </p>
       <p class="text-center topic" id="topic32">
         <a href="#" onclick="init(32);">
-          <img src="images/eat_disabled.png" alt="activities" id="img32"><br>Let's eat! II    
+          <img src="images/eat_disabled.png" alt="activities"class="ui-icon" id="img32"><br>Let's eat! II    
         </a>
       </p>
     </div>
