--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
   <script src="js/vendor/bootstrap.min.js"></script>
   <script src="js/vendor/jquery-ui-1.10.4.min.js"></script>
+  <script src="js/vendor/jquery.cookie.js"></script>
 
   <script src="js/main.js"></script>
 
