--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   <script src="js/vendor/bootstrap.min.js"></script>
   <script src="js/vendor/jquery-ui-1.10.4.min.js"></script>
   <script src="js/vendor/jquery.cookie.js"></script>
+  <script src="js/vendor/jquery.ui.touch-punch.min.js"></script>
 
   <script src="js/main.js"></script>
 
